# kings-theorem

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTORS  DELIVERABLES.md  Dockerfile  GOVERNANCE.md  IGNITION_GUIDE.md  INSTALL.md  INSTALL_DEPENDENCIES.bat  Ignition_KT.bat  LEVEL_4_ACTIVATION.md  MVP_STATUS.md  NEXT_STEPS.md  OUROBOROS_COMPLETE.md  OUROBOROS_SUMMARY.md  PHASE2_COMPLETE.md  PHASE_II_COMPLETE.md  PR_SUMMARY.md  README.md  README_OUROBOROS_old.md  RELEASE.md  SECURITY.md  SOVEREIGNTY_v53.2_SUMMARY.md  VERIFICATION_REPORT.md  bandit_report.txt  docker-compose.yml  god_mode_kt.py  main.py  minimal_test.py  pyproject.toml  pyproject.toml.broken  pytest.ini  repo_dump.txt  repo_manifest.txt  repo_part_01.txt  repo_part_02.txt  requirements.txt  (+5 more)
.github/: CODEOWNERS  KT_AGENT_QUICKSTART.md  MERGE_COMMENT.md  PR_BODY.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
agents/: __init__.py  kt_agent_v1.py
assets/: style.css
audit/: README.md  (+5 more)
kings-theorem/: .gitignore  .pre-commit-config.yaml  MODEL_CARD.md  pyproject.toml
kings-theorem-kt-v47/: INSTALL_DEPENDENCIES.bat  README.md  pyproject.toml  requirements.txt
kings-theorem-kt-v47/audit/: full_system_audit.py
kings-theorem-kt-v47/src/: config.py  main.py
kings-theorem-kt-v47/src/governance/: guardrail_dg_v1.py  verification.py
kings-theorem-kt-v47/src/kernels/: arbiter_v47.py  student_v42.py  teacher_v45.py
kings-theorem-kt-v47/src/primitives/: dual_ledger.py  exceptions.py  risk_math.py
kings-theorem-kt-v47/src/protocols/: apf_v32.py  dcs_v1.py  iads_v10.py  pfm_v1.py  pog_v39.py
kings-theorem/.github/workflows/: ci.yml
kings-theorem/src/kings_theorem/: __init__.py  api.py  cli.py  config.py  logging.py  model_factory.py
kings-theorem/src/kings_theorem/data/: loader.py  preprocess.py
kings-theorem/src/kings_theorem/eval/: evaluator.py  metrics.py
kings-theorem/src/kings_theorem/model/: __init__.py  model_factory.py  trainer.py
kings-theorem/src/kings_theorem/utils/: config.py  logging.py  metrics.py
kings-theorem/tests/: test_api_smoke.py  test_auth.py  test_config_loading.py  test_imports.py  test_invalid_input.py  test_metrics_endpoint.py
kt/: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  run_engine.py
kt/examples/: demo_even_square.py
kt/src/kt_core/: __init__.py  artifacts.py  context.py  orchestrator.py  prover.py  risk.py  telemetry.py  verifier.py
kt/tests/: conftest.py  test_artifacts.py  test_orchestrator.py  test_risk.py  test_verifier_z3.py
(+495 files in other folders)
