[project]
name = "kings-theorem"
version = "0.1.0"
description = "Production-grade MLOps system for King's Theorem"
authors = [
    {name = "Kinrokin", email = "your_email@example.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.12"
keywords = ["llm", "mlops", "ai", "engineering"]

dependencies = [
    # Core Libraries
    "numpy>=1.26.0,<2.0",
    "torch>=2.1.0",
    "transformers>=4.35.0",
    
    # Serving Stack
    "fastapi>=0.98",
    "uvicorn[standard]>=0.22",
    "pydantic>=2.0",
]

[tool.poetry.dev-dependencies]
# Formatting
black = "^24.10.0"
isort = "^5.13.0"

# Testing
pytest = "^8.3.0"
pytest-cov = "^5.0.0"

# Static Analysis / Security
flake8 = "^6.1.0"
bandit = "^1.8.1"
mypy = "^1.8.0"

# MLOps / Reproducibility
wandb = "^0.16.0"
dvc = {extras = ["s3", "gdrive"], version = "^3.0.0"} # Include common remotes

# Pre-commit Hook Manager
pre-commit = "^4.5.0"
