[project]
name = "kt"
version = "6.0.0"
description = "King's Theorem neuro-symbolic orchestrator - Phoenix Edition"
requires-python = ">=3.10"
dependencies = [
    "z3-solver>=4.12.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -v"
asyncio_mode = "strict"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
include = ["src"]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
